# azure-agent

./: .dockerignore  .gitignore  README.md  pyproject.toml
environments/deploy/: Dockerfile  README.md  docker-compose.yml
environments/env/: .env.example  README.md
environments/infra/: README.md
examples/azure_ai_search/: README.md  create_document.py  create_index.py  index_schema.json
src/azure_agent/api/: app.py  main.py
src/azure_agent/api/routes/: chat.py  delete_thread.py  ping.py
src/azure_agent/api/static/: README.md
src/azure_agent/edges/: __init__.py  guardrail_edge.py  router_edge.py
src/azure_agent/encoder/: README.md
src/azure_agent/graphs/: README.md  __init__.py  graph.py  graph3.py
src/azure_agent/messages/: __init__.py  bad_request_error_message.py  default_message.py  parser_error_message.py  pii_error_message.py  pii_message.py  rate_limit_message.py  refusal_message.py  token_limit_message.py
src/azure_agent/middlewares/: state.py  stream.py
src/azure_agent/nodes/: __init__.py  guardrail_node.py  router_node.py
src/azure_agent/prompts/: deep_agent_prompt.yaml  document_agent_prompt.yaml  main_agent_prompt.yaml  researcher_prompt.yaml  router_prompt.yaml  writer_prompt.yaml
src/azure_agent/schemas/: __init__.py  api.py  router.py  state.py
src/azure_agent/tools/: __init__.py  azure_ai_search.py
src/azure_agent/utils/: message.py  sse.py
